<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivEventoModelo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:contentDescription="@string/eventos"
                android:alpha="1.0"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivSoldOut"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:alpha="0.0"
                android:contentDescription="@string/eventos"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/ic_soldout" />

            <TextView
                android:id="@+id/lblTituloModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivEventoModelo"
                android:gravity="center_vertical"
                android:text="@string/titulo"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblFechaModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblTituloModelo"
                android:gravity="center_vertical"
                android:text="@string/fecha"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lblMunicipioModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblFechaModelo"
                android:text="@string/municipio"
                android:textSize="12sp" />
        </RelativeLayout>
</androidx.cardview.widget.CardView>
