<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:layout_editor_absoluteX="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-10dp"
                android:paddingStart="-60dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/primary_light"
                android:textSize="25sp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="45dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintBottom_toTopOf="@+id/navigationView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTituloEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="@color/primary_text"
                android:paddingHorizontal="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ivImagenEvento"/>

            <ImageView
                android:id="@+id/ivImagenEvento"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/imagen_de_evento"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvTituloEvento"
                app:layout_constraintTop_toBottomOf="@id/tvTituloEvento"
                app:layout_constraintLeft_toRightOf="@id/btnAddCal"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvLugarEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/lugar"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tbFavs" />

            <TextView
                android:id="@+id/tvMunicipio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/municipio"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/ivImagenEvento"
                app:layout_constraintTop_toBottomOf="@id/tvLugarEvento" />

            <ToggleButton
                android:id="@+id/tbFavs"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="4dp"
                android:background="@drawable/ic_toggle_favs"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/btnPlace"
                app:layout_constraintLeft_toLeftOf="@id/ivImagenEvento"
                app:layout_constraintRight_toLeftOf="@id/btnPlace"
                app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

            <ImageButton
                android:id="@+id/btnPlace"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/ubicacion"
                android:src="@drawable/ic_place"
                android:background="?android:selectableItemBackground"
                app:layout_constraintLeft_toRightOf="@id/tbFavs"
                app:layout_constraintRight_toLeftOf="@id/btnAddCal"
                app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

            <ImageButton
                android:id="@+id/btnAddCal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_calendario"
                android:src="@drawable/ic_calendar"
                android:background="?android:selectableItemBackground"
                app:layout_constraintLeft_toRightOf="@id/btnPlace"
                app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

            <TextView
                android:id="@+id/tvFechaEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fecha"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/ivImagenEvento"
                app:layout_constraintTop_toBottomOf="@+id/tvMunicipio" />

            <TextView
                android:id="@+id/tvHoraEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="60dp"
                android:text="@string/hora"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/ivImagenEvento"
                app:layout_constraintLeft_toRightOf="@id/btnAddCal"
                app:layout_constraintStart_toStartOf="@+id/ivImagenEvento"
                app:layout_constraintTop_toBottomOf="@id/tvMunicipio" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Precio"
                android:textColor="@color/primary_text"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/ivImagenEvento"
                app:layout_constraintTop_toBottomOf="@id/tvFechaEvento"/>

            <TextView
                android:id="@+id/tvDescripcionEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:padding="20dp"
                android:text="@string/descripcion"
                android:textColor="@color/primary_text"
                app:layout_constraintEnd_toEndOf="@+id/btnStar"
                app:layout_constraintStart_toStartOf="@+id/tvPrecio"
                app:layout_constraintTop_toBottomOf="@+id/tvPrecio" />

            <ImageButton
                android:id="@+id/btnTicket"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/boton_para_ir_a_comprar_entrada"
                android:visibility="visible"
                android:src="@drawable/ic_ticket"
                app:layout_constraintBottom_toTopOf="@+id/tvDescripcionEvento"
                app:layout_constraintEnd_toEndOf="@id/ivImagenEvento"
                app:layout_constraintLeft_toRightOf="@id/tvPrecio" />

            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/boton_para_compartir"
                android:src="@drawable/ic_share"
                app:layout_constraintEnd_toStartOf="@+id/btnStar"
                app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

            <ImageButton
                android:id="@+id/btnStar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/boton_para_valorar"
                android:src="@drawable/ic_star"
                app:layout_constraintEnd_toEndOf="@+id/ivImagenEvento"
                app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/primary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_inferior" />

</androidx.constraintlayout.widget.ConstraintLayout>