<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="4dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:orientation="vertical">

            <TextView android:id="@+id/lblTitulo"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/titulo"
                      android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:contentDescription="@string/portada"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView android:id="@+id/lblFecha"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/fecha"
                      android:layout_marginEnd="5dp"
                      android:gravity="center"
                      android:layout_marginRight="5dp"
                      android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>